# orthophoto-Viewer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  ortho_viewer.spec  pyproject.toml  requirements-web.txt  requirements.txt  web_server.py
.github/workflows/: build.yml
viewer/: __init__.py  geo.py  raster.py  tools.py  viewport.py
