[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ortho-viewer"
version = "0.1.0"
description = "Lightweight GeoTIFF/JP2 orthophoto viewer — desktop (PyQt6) and web (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.4.0",
    "numpy>=1.23.0",
    "pyproj>=3.4.0",
    "fastapi",
    "uvicorn[standard]",
    "pillow",
    # GDAL: install via conda-forge (see README)
]

[project.scripts]
ortho-viewer = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["viewer*"]
